updated about-us section

--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -312,10 +312,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.3s">
+                        <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.3s">
                             <div class="con_team_item_two">
                                 <h5 class="con_title_top">A word from our owner</h5>
-                                <p class="con_p">From Demolition to Junk Removal, we provide a professional and personalized experience. AXB's hands-on owners believe customer success is driven by customer satisfaction. AXB promises to exceed our expectations. From the initial meeting to the last email pulled, our team is committed to going above and beyond for every client.</p>
+                                <p class="con_p">From Demolition to Junk Removal, we provide a professional and personalized experience. AXB's hands-on owners believe customer success is driven by customer satisfaction, which is why we promise to exceed our customer's expectations. From the initial meeting to the last email pulled, our team is committed to going above and beyond for every client.</p>
+                                <p class="con_p">Choose AxB Demolition & Junk Removal for reliable, professional, and eco-friendly services. Let us help you create a safer and more functional environment today. Contact us to discuss your project needs and experience the difference with our team's commitment to quality service.</p>
                             </div>
                         </div>
                     </div>
