--- a/website-docs/service.html
+++ b/website-docs/service.html
@@ -220,16 +220,16 @@
                     </div>
                 </div>
             </section> -->
-            <section class="con_faq_area sec_gap bg_color">
+            <section class="con_faq_area sec_gap bg_color faq">
                 <div class="container">
                     <div class="section_title text-center">
-                        <h6 class="con_title_top">FREQUENTLY ASK QUESTION</h6>
-                        <h2 class="con_title">Want to Ask Something From US?</h2>
+                        <h6 class="con_title_top">Frequently asked questions</h6>
+                        <h2 class="con_title">Want to ask us something?</h2>
                         <div class="line_bottom"></div>
                     </div>
                     <div class="row">
                         <div class="col-lg-6">
-                            <img src="img/home/faq_img.jpg" alt="">
+                            <img src="img/home-1/project/23.jpg" alt="Truck ">
                         </div>
                         <div class="col-lg-6">
                             <div class="accordion" id="accordionExample">
@@ -237,14 +237,14 @@
                                     <div class="card-header" id="headingOne">
                                         <h2 class="mb-0">
                                             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                Integrated Design Pro <i class="ti-plus"></i><i class="ti-minus"></i>
+                                                1. Is there a different price for demolition? <i class="ti-plus"></i><i class="ti-minus"></i>
                                             </button>
                                         </h2>
                                     </div>
 
                                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            Reasonable people may disagree, but here are the sequential steps in designing and building an ADU.
+                                            Yes. We offer free quotes for demolition work. Our pricing section only contains pricing for Junk Removal.
                                         </div>
                                     </div>
                                 </div>
@@ -252,13 +252,13 @@
                                     <div class="card-header" id="headingTwo">
                                         <h2 class="mb-0">
                                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                Find builders and subs <i class="ti-plus"></i><i class="ti-minus"></i>
+                                                2. Do you charge for estimates?<i class="ti-plus"></i><i class="ti-minus"></i>
                                             </button>
                                         </h2>
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            Reasonable people may disagree, but here are the sequential steps in designing and building an ADU.
+                                            No. All of our demolition quotes are free.
                                         </div>
                                     </div>
                                 </div>
@@ -266,21 +266,21 @@
                                     <div class="card-header" id="headingThree">
                                         <h2 class="mb-0">
                                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                General Contracting<i class="ti-plus"></i><i class="ti-minus"></i>
+                                                3. What are the truck dimensions? <i class="ti-plus"></i><i class="ti-minus"></i>
                                             </button>
                                         </h2>
                                     </div>
                                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            Reasonable people may disagree, but here are the sequential steps in designing and building an ADU.
+                                            For Junk Removal, our truck measurements are 13ft long x 8ft wide x 6ft high.
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card">
+                                <!-- <div class="card">
                                     <div class="card-header" id="headingfour">
                                         <h2 class="mb-0">
                                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                                                General Contracting<i class="ti-plus"></i><i class="ti-minus"></i>
+                                                4. General Contracting<i class="ti-plus"></i><i class="ti-minus"></i>
                                             </button>
                                         </h2>
                                     </div>
@@ -289,18 +289,18 @@
                                             Reasonable people may disagree, but here are the sequential steps in designing and building an ADU.
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="con_call_action_area">
-                <div class="overlay_bg parallax-effect" style="background: url(./img/home/action.jpg) no-repeat;"></div>
+                <div class="overlay_bg parallax-effect" style="background: url(./img/home-1/slider12.jpg) no-repeat;"></div>
                 <div class="container">
                     <div class="d-flex action_info justify-content-between align-items-center">
-                        <h2>We will provide you the best work<br> which you dreamt for!</h2>
-                        <a href="#" class="con_btn">FREE CONSULTATION</a>
+                        <h2>Want To Start A Demolition Project?<br> Click Here For An Estimate</h2>
+                        <a href="contact.html" class="con_btn btn_effect">GET A QUOTE</a>
                     </div>
                 </div>
             </section>
