--- a/website-docs/portfolio.html
+++ b/website-docs/portfolio.html
@@ -154,12 +154,12 @@
                                 <img src="img/home-1/project/11.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item build">
+                        <div class="col-lg-4 col-sm-6 portfolio_item build dem">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/12.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item con in">
+                        <div class="col-lg-4 col-sm-6 portfolio_item junk">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/13.jpg" alt="" class="small-image">
                             </div>
@@ -169,22 +169,22 @@
                                 <img src="img/home-1/project/14.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item com design">
+                        <div class="col-lg-4 col-sm-6 portfolio_item pool design">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/15.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item in con">
+                        <div class="col-lg-4 col-sm-6 portfolio_item pool">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/16.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item design">
+                        <div class="col-lg-4 col-sm-6 portfolio_item design dem">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/17.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item build">
+                        <div class="col-lg-4 col-sm-6 portfolio_item pool">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/18.jpg" alt="" class="small-image">
                             </div>
@@ -194,7 +194,7 @@
                                 <img src="img/home-1/project/19.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item design">
+                        <div class="col-lg-4 col-sm-6 portfolio_item junk">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/20.jpg" alt="" class="small-image">
                             </div>
@@ -209,22 +209,22 @@
                                 <img src="img/home-1/project/22.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item design">
+                        <div class="col-lg-4 col-sm-6 portfolio_item design junk">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/23.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item build">
+                        <div class="col-lg-4 col-sm-6 portfolio_item pool">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/24.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item con in">
+                        <div class="col-lg-4 col-sm-6 portfolio_item pool">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/25.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item design build">
+                        <div class="col-lg-4 col-sm-6 portfolio_item design por">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/26.jpg" alt="" class="small-image">
                             </div>
@@ -239,7 +239,7 @@
                                 <img src="img/home-1/project/28.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item design">
+                        <div class="col-lg-4 col-sm-6 portfolio_item design por">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/29.jpg" alt="" class="small-image">
                             </div>
