about-us update

--- a/website-docs/about.html
+++ b/website-docs/about.html
@@ -98,7 +98,7 @@
                                 <div data-parallax='{"x": -5, "y": 10}' class="img_one">
                                     <img src="img/home/2.jpg" alt="">
                                 </div>
-                                <div data-parallax='{"x": -5, "y": -25}' class="img_two">
+                                <div data-parallax='{"x": -5, "y": -25}' class="img_two about">
                                     <img src="img/home-1/project/13.jpg" alt="">
                                 </div>
                             </div>
