updated image bug on service page

--- a/website-docs/service.html
+++ b/website-docs/service.html
@@ -228,7 +228,7 @@
                         <div class="line_bottom"></div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 faq-img">
                             <img src="img/home-1/project/23.jpg" alt="Truck ">
                         </div>
                         <div class="col-lg-6">
