updated typos and link bug

--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -150,7 +150,7 @@
                             <div class="con_service_item">
                                 <div class="icon"><img src="img/home-1/icon3.png" alt=""></div>
                                 <a href="#quote">
-                                    <h4>Impecable & Efficient Demolition Service</h4>
+                                    <h4>Impeccable & Efficient Demolition Service</h4>
                                 </a>
                                 <p>We strive to offer the absolute best in terms of excellence and quality without sacrificing your budget needs. Contact us to get a free quote.</p>
                             </div>
@@ -161,7 +161,7 @@
                                 <a href="#quote">
                                     <h4>Ottawa's Most Reliable </h4>
                                 </a>
-                                <p>Our experienced team will be with you every step of the way to ensure that your project is executed to perfection. Our professional, dedicated and flexible </p>
+                                <p>Our experienced team will be with you every step of the way to ensure that your project is executed to perfection. Our motto is to be professional, dedicated and flexible to your needs.</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-6 wow fadeInUp" data-wow-delay="0.7s">
