--- a/website-docs/portfolio.html
+++ b/website-docs/portfolio.html
@@ -62,7 +62,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto menu">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/website-docs/index.html">
+                                    <a class="nav-link" href="index.html">
                                         HOME
                                     </a>
                                 </li>
