--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -159,7 +159,7 @@
                             <div class="con_service_item">
                                 <div class="icon"><img src="img/home-1/icon7.png" alt=""></div>
                                 <a href="#quote">
-                                    <h4>Ottawa's Most Reliable </h4>
+                                    <h4>Ottawa's Most Reliable Team</h4>
                                 </a>
                                 <p>Our experienced team will be with you every step of the way to ensure that your project is executed to perfection. Our motto is to be professional, dedicated and flexible to your needs.</p>
                             </div>
@@ -329,7 +329,7 @@
                         <div class="col-lg-6 col-md-5 map_info">
                             <!-- <div id="mapBox2" class="mapBox2" data-lat="40.701083" data-lon="-74.1522848" data-zoom="12" data-marker="img/location.png" data-info="54B, Tailstoi Town 5238 La city, IA 522364" data-mlat="40.701083" data-mlon="-74.1522848">
                             </div> -->
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d89607.8237521422!2d-75.59863944434638!3d45.42457258965346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1691974829583!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.1968091962485!2d-75.43623592385107!3d45.42553387107325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce72aaf5d62ecd%3A0xc44bbfb449082712!2s4867%20Navan%20Rd%2C%20Navan%2C%20ON%20K4B%201H9!5e0!3m2!1sen!2sca!4v1692564674537!5m2!1sen!2sca" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                         </div>
                         <div class="col-lg-6 col-md-7">
