added testimonials section

--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -281,13 +281,14 @@
             </section>
 
 
-            <!-- <section class="con_testimonial_area">
+            <section class="con_testimonial_area">
                 <div class="container_testimonials section_title text-center wow fadeInUp">
                     <h6 class="con_title_top">See what people say about us</h6>
-                    <h2 class="con_title">Our testimonials</h2>
-                    
+                    <h2 class="con_title">Our Testimonials</h2>
+                    <div class='sk-ww-google-reviews' data-embed-id='182705'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
                 </div>
-            </section> -->
+            </section>
+
             <section class="con_team_area_two sec_gap bg_color">
                 <div class="container">
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
@@ -336,7 +337,7 @@
                             <div class="contact_info">
                                 <div class="section_title">
                                     <h5 class="con_title_top">REQUEST A QUOTE</h5>
-                                    <h2 class="con_title">Contact With Us</h2>
+                                    <h2 class="con_title">Contact Us</h2>
                                 </div>
                                 <form action="#quote" method="post" id="contact-form" novalidate="novalidate" class="contact_form get_quote_form" data-netlify="true">
                                     <div class="form-group">
