--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -302,7 +302,7 @@
                                 <div class="team_img hover_effect">
                                     <img src="img/home-1/team1.jpg" alt="team1">
                                     <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=61550328518202&locale=hi_IN&paipv=0&eav=AfZEAsCpOto2KyGYFQaC5M_MZqFlU7fpxfkk7wbtlatl4WeXGx6ZtaSZGkHaGN_5gI4"><i class="ti-facebook"></i></a>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -382,7 +382,7 @@
                                     </div>
                                 </div>
                                 <div class="social_icon">
-                                    <a href="#"><i class="ti-facebook"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=61550328518202&locale=hi_IN&paipv=0&eav=AfZEAsCpOto2KyGYFQaC5M_MZqFlU7fpxfkk7wbtlatl4WeXGx6ZtaSZGkHaGN_5gI4"><i class="ti-facebook"></i></a>
                                 </div>
                             </div>
                         </div>
