--- a/website-docs/about.html
+++ b/website-docs/about.html
@@ -37,7 +37,7 @@
                                 </div>
                                 <div class="col-md-4 col-3 text-right">
                                     <div class="h_social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=61550328518202&locale=hi_IN&paipv=0&eav=AfZEAsCpOto2KyGYFQaC5M_MZqFlU7fpxfkk7wbtlatl4WeXGx6ZtaSZGkHaGN_5gI4"><i class="ti-facebook"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -203,7 +203,7 @@
                                 <div class="team_img hover_effect">
                                     <img src="img/home-1/team1.jpg" alt="team1">
                                     <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=61550328518202&locale=hi_IN&paipv=0&eav=AfZEAsCpOto2KyGYFQaC5M_MZqFlU7fpxfkk7wbtlatl4WeXGx6ZtaSZGkHaGN_5gI4"><i class="ti-facebook"></i></a>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                                 <div class="social_icon">
-                                    <a href="#"><i class="ti-facebook"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=61550328518202&locale=hi_IN&paipv=0&eav=AfZEAsCpOto2KyGYFQaC5M_MZqFlU7fpxfkk7wbtlatl4WeXGx6ZtaSZGkHaGN_5gI4"><i class="ti-facebook"></i></a>
                                 </div>
                             </div>
                         </div>
