--- a/website-docs/pricing.html
+++ b/website-docs/pricing.html
@@ -36,7 +36,7 @@
                                 </div>
                                 <div class="col-md-4 col-3 text-right">
                                     <div class="h_social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=61550328518202&locale=hi_IN&paipv=0&eav=AfZEAsCpOto2KyGYFQaC5M_MZqFlU7fpxfkk7wbtlatl4WeXGx6ZtaSZGkHaGN_5gI4"><i class="ti-facebook"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -172,7 +172,7 @@
                                     </div>
                                 </div>
                                 <div class="social_icon">
-                                    <a href="#"><i class="ti-facebook"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=61550328518202&locale=hi_IN&paipv=0&eav=AfZEAsCpOto2KyGYFQaC5M_MZqFlU7fpxfkk7wbtlatl4WeXGx6ZtaSZGkHaGN_5gI4"><i class="ti-facebook"></i></a>
                                 </div>
                             </div>
                         </div>
