LCP phase 1 update

--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="vendors/loader/animation.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link  rel="preload" href="img/home-1/slider12.jpg" as="image" />
 
     <title>AXB Demolition - Junk Removal</title>
 </head>
