--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="img/axblogo2.svg" type="image/x-icon">
+    <link rel="preload" fetchpriority="high" href="img/home-1/slider12.jpg" as="image" type ="image">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendors/slick/slick.css">
@@ -17,7 +18,7 @@
     <link rel="stylesheet" href="vendors/loader/animation.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link  rel="preload" href="img/home-1/slider12.jpg" as="image" />
+    
 
     <title>AXB Demolition - Junk Removal</title>
 </head>
