--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -268,8 +268,17 @@
 
     <link rel="preload" href="vendors/bootstrap/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet' ">
     <noscript><link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css"></noscript>
-
+    
     <link rel="stylesheet" href="vendors/slick/slick.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+
+    <style>
+        @import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:400,500,600,700|Roboto:400,500");
+    </style>
+
+    <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet' ">
+    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+
     <link rel="stylesheet" href="vendors/slick/slick-theme.css">
     <link rel="stylesheet" href="vendors/animation/animate.css">
     <link rel="stylesheet" href="vendors/themify/themify-icons.css">
@@ -277,7 +286,7 @@
     <link rel="stylesheet" href="vendors/magnify-pop/magnific-popup.css">
     <link rel="stylesheet" href="vendors/loader/animation.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/style.css">
+    
 
     <title>AXB Demolition - Junk Removal</title>
 </head>
