--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -270,14 +270,15 @@
     <noscript><link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css"></noscript>
     
     <link rel="stylesheet" href="vendors/slick/slick.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
 
-    <style>
-        @import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:400,500,600,700|Roboto:400,500");
-    </style>
+    <!-- font -->
+    <link rel="preconnect preload" as="font" href="https://fonts.googleapis.com">
+    <link rel="preconnect preload" as="font" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;600;700&display=swap" rel="stylesheet preload" as="font">
 
+    <!-- Styling -->
     <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet' ">
-    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+    <noscript><link rel="stylesheet" href="css/style.css"></noscript> <!-- link to style sheet -->
 
     <link rel="stylesheet" href="vendors/slick/slick-theme.css">
     <link rel="stylesheet" href="vendors/animation/animate.css">
