added new gagllery photos

--- a/website-docs/portfolio.html
+++ b/website-docs/portfolio.html
@@ -99,6 +99,237 @@
                         <div data-filter=".shed" class="work_portfolio_item">SHED REMOVAL</div>
                     </div>
                     <div class="row portfolio_gallery" id="work-portfolio">
+
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/31.webp" alt="demolition truck" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/65.webp" alt="Orange tracktor" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/74.webp" alt="View of roof removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/32.webp" alt="demolition truck" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/75.webp" alt="Tree branch removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/33.webp" alt="demolition truck" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/34.webp" alt="Truck removal and demolition" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/35.webp" alt="Truck removal and demolition" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/36.webp" alt="Junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/37.webp" alt="Customer satisfaction comment" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/38.webp" alt="Junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/39.webp" alt="Junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/40.webp" alt="Tree branches removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/41.webp" alt="Junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/42.webp" alt="Demolition truck" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/43.webp" alt="Demolition truck" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/44.webp" alt="Junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/44.webp" alt="Junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/45.webp" alt="Junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/46.webp" alt="Junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/47.webp" alt="Parked demolition trucks" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/48.webp" alt="shed" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/49.webp" alt="Workers disposing of shed" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/50.webp" alt="Workers disposing of shed" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/51.webp" alt="Workers disposing of shed" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/52.webp" alt="Worker demolishing kitchen floow" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/53.webp" alt="Junk" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/54.webp" alt="Worker drilling hole in the ground" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/55.webp" alt="Truck containing junk parked next to house" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/56.webp" alt="Truck emptying bin" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/57.webp" alt="Landscape junk removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/58.webp" alt="Kitchen floor demolition" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/59.webp" alt="Truck" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/60.webp" alt="Truck" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/61.webp" alt="Truck unloading junk" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/62.webp" alt="Junk black plastic bags in a room" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/63.webp" alt="Destroyed shed" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con pool">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/64.webp" alt="Pool disposal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/66.webp" alt="Removal truck with crane" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/67.webp" alt="Demolition trucks" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/68.webp" alt="truck removing junk" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con pool">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/69.webp" alt="Jacuzzi" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/73.webp" alt="Man blowing leaves" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/70.webp" alt="Shed demolition" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con pool">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/72.webp" alt="Tree branch removal" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/project2/71.webp" alt="Junk enclosed behind fence" class="small-image">
+                            </div>
+                        </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item con dem">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/1.jpg" alt="Worker demolishing concrete steps" class="small-image">
