additional text in about section

--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -397,7 +397,9 @@
                             <div class="con_about_text">
                                 <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >ABOUT US</h6>
                                 <h2 class="con_title wow fadeInUp" data-wow-delay="0.3s">DEMOLITION & JUNK REMOVAL</h2>
-                                <p class="con_p wow fadeInUp" data-wow-delay="0.4s">As a specialized team, we excel in expertly dismantling and removing any unwanted structures or items from your residential or commercial premises. With our unwavering expertise and commitment, we turn your visions into reality with precision and efficiency.<br><br>Contact us to discuss your project needs and experience the difference with our team's expertise and personalized approach. </p>
+                                <p class="con_p wow fadeInUp" data-wow-delay="0.4s"> Did you recently purchase or inherit a home or place or business in Ottawa and are overwhelmed with its contents? Whether it’s indoors or outdoors , we can remove and dismantle anything from your space . We specialize in hoarding cleanups, years of accumulated materials in barns ,sheds or basements . No job is too complex, our team is experienced to deal with even the worst case scenario’s. Don’t hesitate, we can help !
+                                    <br><br>As a specialized team, we excel in expertly dismantling and removing any unwanted structures or items from your residential or commercial premises. With our unwavering expertise and commitment, we turn your visions into reality with precision and efficiency. Contact us to discuss your project needs and experience the difference with our team's expertise and personalized approach.
+                                </p>
                                 <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a>
                             </div>
                         </div>
