added robot.txt file

--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="As a specialized team located in Ottawa, we excel in the demolition, junk removal and cleanup of any accumulated materials. Whether it is indoors or outdoors, barns, sheds, basements, pool removal, no job is too complex for our experienced team! ">
+    <meta name="description" content="Looking for the best demolition and junk removal service in Ottawa? Whether it is indoors or outdoors, we take care of your junk removal projects. Pool removal, shed removal, material disposal. ">
     <link rel="shortcut icon" href="img/axblogo2.svg" type="image/x-icon">
     <link rel="preload" fetchpriority="high" href="img/home-1/slider12.jpg" as="image" type ="image">
     
